Cleanup of tests in the drools scenario simulation package