@@ -17,12 +17,14 @@ package org.drools.scenariosimulation.backend.expression;
 
 import java.math.BigDecimal;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 
 import com.fasterxml.jackson.databind.node.TextNode;
+
+import org.assertj.core.api.Condition;
+import org.junit.Before;
 import org.junit.Ignore;
 import org.junit.Test;
 import org.mvel2.CompileException;
@@ -33,29 +35,37 @@ import static org.drools.scenariosimulation.api.utils.ConstantsHolder.ACTUAL_VAL
 import static org.drools.scenariosimulation.api.utils.ConstantsHolder.MVEL_ESCAPE_SYMBOL;
 
 public class MVELExpressionEvaluatorTest {
+	
+	private Condition<ExpressionEvaluatorResult> successful= new Condition<>(x -> x.isSuccessful(), "isSuccessful");
+	private Condition<ExpressionEvaluatorResult> notSuccessful= new Condition<>(x -> !x.isSuccessful(), "isSuccessful");
 
-    MVELExpressionEvaluator evaluator = new MVELExpressionEvaluator(MVELExpressionEvaluatorTest.class.getClassLoader());
+    private MVELExpressionEvaluator evaluator;
 
+    @Before
+    public void setUp() {
+        evaluator = new MVELExpressionEvaluator(MVELExpressionEvaluatorTest.class.getClassLoader());
+    }
+    
     @Test
     public void evaluateUnaryExpression() {
-        assertThat(evaluator.evaluateUnaryExpression(mvelExpression("java.util.Objects.equals(" + ACTUAL_VALUE_IDENTIFIER + ", \"Test\")"), "Test", String.class).isSuccessful()).isTrue();
-        assertThat(evaluator.evaluateUnaryExpression(mvelExpression("java.util.Objects.equals(" + ACTUAL_VALUE_IDENTIFIER + ", " + "\"Test\")"), "Test1", String.class).isSuccessful()).isFalse();
-        assertThat(evaluator.evaluateUnaryExpression(mvelExpression("1"), 1, Integer.class).isSuccessful()).isTrue();
-        assertThat(evaluator.evaluateUnaryExpression(mvelExpression("2"), 1, Integer.class).isSuccessful()).isFalse();
+        assertThat(evaluator.evaluateUnaryExpression(mvelExpression("java.util.Objects.equals(" + ACTUAL_VALUE_IDENTIFIER + ", \"Test\")"), "Test", String.class)).is(successful);
+        assertThat(evaluator.evaluateUnaryExpression(mvelExpression("java.util.Objects.equals(" + ACTUAL_VALUE_IDENTIFIER + ", " + "\"Test\")"), "Test1", String.class)).is(notSuccessful);
+        assertThat(evaluator.evaluateUnaryExpression(mvelExpression("1"), 1, Integer.class)).is(successful);
+        assertThat(evaluator.evaluateUnaryExpression(mvelExpression("2"), 1, Integer.class)).is(notSuccessful);
 
-        assertThat(evaluator.evaluateUnaryExpression(mvelExpression(""), null, String.class).isSuccessful()).isTrue();
-        assertThat(evaluator.evaluateUnaryExpression(mvelExpression(""), "", String.class).isSuccessful()).isFalse();
+        assertThat(evaluator.evaluateUnaryExpression(mvelExpression(""), null, String.class)).is(successful);
+        assertThat(evaluator.evaluateUnaryExpression(mvelExpression(""), "", String.class)).is(notSuccessful);
 
-        assertThat(evaluator.evaluateUnaryExpression(mvelExpression(null), null, String.class).isSuccessful()).isTrue();
-        assertThat(evaluator.evaluateUnaryExpression(mvelExpression(null), "null", String.class).isSuccessful()).isFalse();
+        assertThat(evaluator.evaluateUnaryExpression(mvelExpression(null), null, String.class)).is(successful);
+        assertThat(evaluator.evaluateUnaryExpression(mvelExpression(null), "null", String.class)).is(notSuccessful);
 
-        assertThat(evaluator.evaluateUnaryExpression(mvelExpression("\"\""), "", String.class).isSuccessful()).isTrue();
-        assertThat(evaluator.evaluateUnaryExpression(mvelExpression(null), "", String.class).isSuccessful()).isFalse();
+        assertThat(evaluator.evaluateUnaryExpression(mvelExpression("\"\""), "", String.class)).is(successful);
+        assertThat(evaluator.evaluateUnaryExpression(mvelExpression(null), "", String.class)).is(notSuccessful);
 
-        assertThat(evaluator.evaluateUnaryExpression(mvelExpression(ACTUAL_VALUE_IDENTIFIER + " == 123"), 123, Integer.class).isSuccessful()).isTrue();
-        assertThat(evaluator.evaluateUnaryExpression(mvelExpression(ACTUAL_VALUE_IDENTIFIER + " != 123"), 321, Integer.class).isSuccessful()).isTrue();
-        assertThat(evaluator.evaluateUnaryExpression(mvelExpression(ACTUAL_VALUE_IDENTIFIER + " == 123"), 321, Integer.class).isSuccessful()).isFalse();
-        assertThat(evaluator.evaluateUnaryExpression(mvelExpression(ACTUAL_VALUE_IDENTIFIER + " != 123"), 123, Integer.class).isSuccessful()).isFalse();
+        assertThat(evaluator.evaluateUnaryExpression(mvelExpression(ACTUAL_VALUE_IDENTIFIER + " == 123"), 123, Integer.class)).is(successful);
+        assertThat(evaluator.evaluateUnaryExpression(mvelExpression(ACTUAL_VALUE_IDENTIFIER + " != 123"), 321, Integer.class)).is(successful);
+        assertThat(evaluator.evaluateUnaryExpression(mvelExpression(ACTUAL_VALUE_IDENTIFIER + " == 123"), 321, Integer.class)).is(notSuccessful);
+        assertThat(evaluator.evaluateUnaryExpression(mvelExpression(ACTUAL_VALUE_IDENTIFIER + " != 123"), 123, Integer.class)).is(notSuccessful);
 
         assertThatThrownBy(() -> evaluator.evaluateUnaryExpression(null, "", String.class))
                 .isInstanceOf(IllegalArgumentException.class)
@@ -63,104 +73,67 @@ public class MVELExpressionEvaluatorTest {
     }
 
     @Test
-    public void evaluateLiteralExpression() {
-        assertThat(evaluator.evaluateLiteralExpression(mvelExpression("1"), Integer.class.getCanonicalName(),
-                Collections.emptyList()
-        )).isEqualTo(1);
+    public void evaluateLiteralExpression_many() {
+        assertThat(evaluateLiteralExpression("1", Integer.class)).isEqualTo(1);
 
-        assertThat(evaluator.evaluateLiteralExpression(mvelExpression("\"Value\""), String.class.getCanonicalName(),
-                Collections.emptyList()
-        )).isEqualTo("Value");
+        assertThat(evaluateLiteralExpression("\"Value\"", String.class)).isEqualTo("Value");
 
-        assertThat(evaluator.evaluateLiteralExpression(mvelExpression("2 * 3"), Integer.class.getCanonicalName(),
-                Collections.emptyList()
-        )).isEqualTo(6);
+        assertThat(evaluateLiteralExpression("2 * 3", Integer.class)).isEqualTo(6);
 
-        assertThat(evaluator.evaluateLiteralExpression(mvelExpression("-1 + (3 * 5)"), Integer.class.getCanonicalName(),
-                Collections.emptyList()
-        )).isEqualTo(14);
+        assertThat(evaluateLiteralExpression("-1 + (3 * 5)", Integer.class)).isEqualTo(14);
 
-        assertThat(evaluator.evaluateLiteralExpression(mvelExpression("[\"Jim\"]"), ArrayList.class.getCanonicalName(),
-                Collections.emptyList()
-        )).isEqualTo(List.of("Jim"));
+        assertThat(evaluateLiteralExpression("[\"Jim\"]", ArrayList.class)).isEqualTo(List.of("Jim"));
 
-        assertThat(evaluator.evaluateLiteralExpression(mvelExpression("[]"), ArrayList.class.getCanonicalName(),
-                Collections.emptyList()
-        )).isEqualTo(Collections.emptyList());
+        assertThat(evaluateLiteralExpression("[]", ArrayList.class)).isEqualTo(List.of());
 
-        assertThat(evaluator.evaluateLiteralExpression(mvelExpression("\"abc..\"[2]"), Character.class.getCanonicalName(),
-                                                       Collections.emptyList()
-        ))
-                .isEqualTo('c');
+        assertThat(evaluateLiteralExpression("\"abc..\"[2]", Character.class)).isEqualTo('c');
 
-        assertThat(evaluator.evaluateLiteralExpression(mvelExpression("1.234B"), BigDecimal.class.getCanonicalName(),
-                                                       Collections.emptyList()
-        ))
-                .isEqualTo(new BigDecimal("1.234"));
+        assertThat(evaluateLiteralExpression("1.234B", BigDecimal.class)).isEqualTo(new BigDecimal("1.234"));
 
-        assertThat(evaluator.evaluateLiteralExpression(mvelExpression("1.234d"), Double.class.getCanonicalName(),
-                                                       Collections.emptyList()
-        ))
-                .isEqualTo(Double.valueOf("1.234"));
+        assertThat(evaluateLiteralExpression("1.234d", Double.class)).isEqualTo(Double.valueOf("1.234"));
 
-        assertThat(evaluator.evaluateLiteralExpression("# \"Value\"", String.class.getCanonicalName(), Collections.emptyList())).isEqualTo("Value");
+        assertThat(evaluateLiteralExpression("\"Value\"", String.class)).isEqualTo("Value");
 
-        assertThat(evaluator.evaluateLiteralExpression("# a = 1; b = 2; a+b;", Integer.class.getCanonicalName(), Collections.emptyList())).isEqualTo(3);
+        assertThat(evaluateLiteralExpression("a = 1; b = 2; a+b;", Integer.class)).isEqualTo(3);
 
-        assertThat(evaluator.evaluateLiteralExpression("# a = \"Te\"; b = \"st\"; a+b;", String.class.getCanonicalName(), Collections.emptyList())).isEqualTo("Test");
+        assertThat(evaluateLiteralExpression("a = \"Te\"; b = \"st\"; a+b;", String.class)).isEqualTo("Test");
 
-        assertThatThrownBy(() -> evaluator.evaluateLiteralExpression("# a = 1 b = 2 a+b;", Integer.class.getCanonicalName(), Collections.emptyList()))
+        assertThatThrownBy(() -> evaluateLiteralExpression("a = 1 b = 2 a+b;", Integer.class))
                 .isInstanceOf(CompileException.class);
 
-        assertThatThrownBy(() -> evaluator.evaluateLiteralExpression("# a = 1; a+b;", Integer.class.getCanonicalName(), Collections.emptyList()))
+        assertThatThrownBy(() -> evaluateLiteralExpression("a = 1; a+b;", Integer.class))
                 .isInstanceOf(CompileException.class);
 
-        assertThat(evaluator.evaluateLiteralExpression(mvelExpression("a = \"Bob\";\n" +
+        assertThat(evaluateLiteralExpression("a = \"Bob\";\n" +
                 "test = new java.util.ArrayList();\n" +
                 "test.add(a);\n" +
                 "test.add(\"Michael\");\n" +
-                "test;"),
-                ArrayList.class.getCanonicalName(),
-                Collections.emptyList()
-        )).isEqualTo(Arrays.asList("Bob", "Michael"));
+                "test;",
+                ArrayList.class)).isEqualTo(List.of("Bob", "Michael"));
 
-        HashMap<String, String> expectedMap = new HashMap<String, String>() {{
-            put("Jim", "Person");
-        }};
+        Map<String, String> expectedMap = Map.of("Jim", "Person");
 
-        assertThat(evaluator.evaluateLiteralExpression(mvelExpression("[\"Jim\" : \"Person\"]"),
-                HashMap.class.getCanonicalName(),
-                Collections.emptyList()
-        )).isEqualTo(expectedMap);
-        assertThat(evaluator.evaluateLiteralExpression(mvelExpression("a = \"Person\";\n" +
+        assertThat(evaluateLiteralExpression("[\"Jim\" : \"Person\"]", HashMap.class)).isEqualTo(expectedMap);
+        
+        assertThat(evaluateLiteralExpression("a = \"Person\";\n" +
                 "test = new java.util.HashMap();\n" +
                 "test.put(\"Jim\", a);\n" +
-                "test;"),
-                HashMap.class.getCanonicalName(),
-                Collections.emptyList()
-        )).isEqualTo(expectedMap);
-        assertThat(evaluator.evaluateLiteralExpression(
-                mvelExpression("a = \"Person\";test = new java.util.HashMap();test.put(\"Jim\", a);test;"),
-                HashMap.class.getCanonicalName(),
-                Collections.emptyList()
-        )).isEqualTo(expectedMap);
-        assertThat(evaluator.evaluateLiteralExpression(
-                mvelExpression("a = \"Person\";\n" +
+                "test;",
+                HashMap.class)).isEqualTo(expectedMap);
+        
+        assertThat(evaluateLiteralExpression("a = \"Person\";test = new java.util.HashMap();test.put(\"Jim\", a);test;", HashMap.class)).isEqualTo(expectedMap);
+        
+        assertThat(evaluateLiteralExpression("a = \"Person\";\n" +
                         "test = new java.util.HashMap();\n" +
                         "test.put(\"Jim\", a);\n" +
                         "test;\n" +
                         "test.clear();\n" +
-                        "test;"),
-                HashMap.class.getCanonicalName(),
-                Collections.emptyList()
-        )).isEqualTo(Collections.emptyMap());
+                        "test;",
+                HashMap.class)).isEqualTo(Map.of());
 
-        assertThatThrownBy(() -> evaluator.evaluateLiteralExpression("1+", String.class.getCanonicalName(), Collections.emptyList()))
-                .isInstanceOf(RuntimeException.class);
+        assertThatThrownBy(() -> evaluateLiteralExpression("1+", String.class)).isInstanceOf(RuntimeException.class);
 
-        assertThatThrownBy(() -> evaluator.evaluateLiteralExpression(mvelExpression("1"), String.class.getCanonicalName(),
-                                                                     Collections.emptyList()
-        ))
+        assertThatThrownBy(() -> evaluateLiteralExpression("1", String.class))
                 .isInstanceOf(IllegalArgumentException.class)
                 .hasMessageStartingWith("Cannot assign a 'java.lang.Integer");
     }
@@ -168,15 +141,13 @@ public class MVELExpressionEvaluatorTest {
     @Ignore("https://issues.redhat.com/browse/DROOLS-4649")
     @Test
     public void evaluateLiteralExpression_Array() {
-        assertThat(evaluator.evaluateLiteralExpression(mvelExpression("{\"Jim\", \"Michael\"}"), Object[].class.getCanonicalName(),
-                                                       Collections.emptyList()
-        ))
-                .isEqualTo(new String[]{"Jim", "Michael"});
+        assertThat(evaluateLiteralExpression("{\"Jim\", \"Michael\"}", Object[].class)).isEqualTo(new String[]{"Jim", "Michael"});
 
-        assertThat(evaluator.evaluateLiteralExpression(mvelExpression("{ }"), Object[].class.getCanonicalName(),
-                                                       Collections.emptyList()
-        ))
-                .isEqualTo(new String[]{});
+        assertThat(evaluateLiteralExpression("{ }", Object[].class)).isEqualTo(new String[]{});
+    }
+    
+    private Object evaluateLiteralExpression(String rawExpression, Class klass) {
+    	return evaluator.evaluateLiteralExpression(mvelExpression(rawExpression), klass.getCanonicalName(), List.of());
     }
 
     @Test
