@@ -23,6 +23,7 @@ import java.util.function.Function;
 import org.drools.scenariosimulation.api.model.FactMappingValue;
 import org.drools.scenariosimulation.backend.runner.model.ValueWrapper;
 import org.drools.scenariosimulation.backend.runner.model.ScenarioResult;
+import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.kie.api.runtime.KieSession;
@@ -31,10 +32,8 @@ import org.kie.internal.command.RegistryContext;
 import org.mockito.Mock;
 import org.mockito.junit.MockitoJUnitRunner;
 
-import static java.util.Arrays.asList;
 import static org.mockito.Mockito.any;
 import static org.mockito.Mockito.anyBoolean;
-import static org.mockito.Mockito.reset;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
@@ -54,22 +53,32 @@ public class ValidateFactCommandTest {
     @Mock
     private RegistryContext registryContext;
 
-    @Test
-    public void executeTest() {
+	private ValidateFactCommand validateFactCommand;
+
+    @Before
+    public void setUp() {
         when(registryContext.lookup(KieSession.class)).thenReturn(kieSession);
         Function<Object, ValueWrapper> alwaysMatchFunction = ValueWrapper::of;
 
-        ValidateFactCommand validateFactCommand = new ValidateFactCommand(List.of(new FactCheckerHandle(String.class, alwaysMatchFunction, scenarioResult)));
-
+        validateFactCommand = new ValidateFactCommand(List.of(new FactCheckerHandle(String.class, alwaysMatchFunction, scenarioResult)));
+    }
+    
+    @Test
+    public void execute_setResultIsCalled() {
         when(kieSession.getObjects(any(ObjectFilter.class))).thenReturn(Collections.singleton(null));
+
         validateFactCommand.execute(registryContext);
+        
         verify(scenarioResult, times(1)).setResult(anyBoolean());
-
-        reset(scenarioResult);
-
-        when(kieSession.getObjects(any(ObjectFilter.class))).thenReturn(Collections.emptyList());
+    }
+    
+    @Test
+    public void execute_setResultIsNotCalled() {
+        when(kieSession.getObjects(any(ObjectFilter.class))).thenReturn(List.of());
         when(scenarioResult.getFactMappingValue()).thenReturn(factMappingValue);
+
         validateFactCommand.execute(registryContext);
+        
         verify(scenarioResult, times(0)).setResult(anyBoolean());
     }
 }
