@@ -15,7 +15,6 @@
  */
 package org.drools.scenariosimulation.backend.runner;
 
-import java.util.Arrays;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
@@ -58,7 +57,7 @@ public class SimulationRunMetadataBuilderTest {
         Map<Integer, List<String>> expectedResult1Decision2 = fillAuditMessagesForDecision(result1, messagesResult1decision2, "d2");
 
         ScenarioResultMetadata result2 = new ScenarioResultMetadata(new ScenarioWithIndex(2, new Scenario()));
-        List<String> expectedDecisionsResult2 = Arrays.asList("d1", "d3");
+        List<String> expectedDecisionsResult2 = List.of("d1", "d3");
         result2.addExecuted(expectedDecisionsResult2.get(0));
         result2.addExecuted(expectedDecisionsResult2.get(1));
         result2.addAvailable("d1");
@@ -74,19 +73,22 @@ public class SimulationRunMetadataBuilderTest {
         SimulationRunMetadataBuilder builder = SimulationRunMetadataBuilder.create();
         builder.addScenarioResultMetadata(result1);
         builder.addScenarioResultMetadata(result2);
+        
         SimulationRunMetadata build = builder.build();
 
         assertThat(build.getAvailable()).isEqualTo(3);
         assertThat(build.getExecuted()).isEqualTo(3);
         assertThat(build.getCoveragePercentage()).isCloseTo(100, within(0.1));
-        assertThat(build.getOutputCounter().get("d1")).isEqualTo(2);
-        assertThat(build.getOutputCounter().get("d2")).isEqualTo(1);
-        assertThat(build.getScenarioCounter().get(scenarioWithIndex1).size()).isEqualTo(2);
+        assertThat(build.getOutputCounter()).containsEntry("d1", 2).containsEntry("d2", 1);
+        assertThat(build.getScenarioCounter().get(scenarioWithIndex1)).hasSize(2);
+        
         AuditLog retrieved = build.getAuditLog();
+        
         assertThat(retrieved).isNotNull();
+        
         final List<AuditLogLine> auditLogLines = retrieved.getAuditLogLines();
-        assertThat(auditLogLines).isNotNull();
-        assertThat(messagesResult1decision1.size() + messagesResult1decision2.size() + messagesResult2decision1.size() + messagesResult2decision3.size()).isEqualTo(auditLogLines.size());
+        
+        assertThat(auditLogLines).isNotNull().hasSize(messagesResult1decision1.size() + messagesResult1decision2.size() + messagesResult2decision1.size() + messagesResult2decision3.size());
 
         checkAuditLogLine(auditLogLines, expectedResult1Decision1, expectedResult1Decision2, expectedResult2Decision1, expectedResult2Decision3);
     }
@@ -103,7 +105,7 @@ public class SimulationRunMetadataBuilderTest {
                 if (expectedMessageParameters.size() == 3) {
                     commonCheckAuditLogLine(auditLogLines.get(auditLineCounter), expectedMessageParameters.get(0), expectedMessageParameters.get(1), expectedMessageParameters.get(2));
                 } else {
-                    commonCheckAuditLogLine(auditLogLines.get(auditLineCounter), expectedMessageParameters.get(0), expectedMessageParameters.get(1), null);
+                    commonCheckAuditLogLine(auditLogLines.get(auditLineCounter), expectedMessageParameters.get(0), expectedMessageParameters.get(1));
                 }
                 auditLineCounter++;
             }
@@ -120,11 +122,11 @@ public class SimulationRunMetadataBuilderTest {
             final DMNDecisionResult.DecisionEvaluationStatus status = DMNDecisionResult.DecisionEvaluationStatus.values()[new Random().nextInt(DMNDecisionResult.DecisionEvaluationStatus.values().length)];
             if (new Random().nextBoolean()) {
                 scenarioResultMetadata.addAuditMessage(i, decisionName, status.toString());
-                parameters.addAll(Arrays.asList(decisionName, status.toString()));
+                parameters.addAll(List.of(decisionName, status.toString()));
             } else {
                 String messageContent = message.getLevel().name() + ": " + message.getText();
                 scenarioResultMetadata.addAuditMessage(i, decisionName, status.toString(), messageContent);
-                parameters.addAll(Arrays.asList(decisionName, status.toString(), messageContent));
+                parameters.addAll(List.of(decisionName, status.toString(), messageContent));
             }
             expectedMessageParameters.put(i, parameters);
         });
